--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
             href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@400;700&display=swap"
             rel="stylesheet"
         />
+        <link rel="shortcut icon" href="./src/assets/registration-icon.png" type="image/x-icon">
         <title>Registration form</title>
     </head>
     <body>
